syntax = "proto3";

package forum;
option go_package = "github.com/bd_kursovaya/api/forum/forum";
import "google/api/annotations.proto";

service Forum {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/forum/account"
      body: "*"
    };
  }

}

message Account {
  string nickname = 1;
  string avatar = 2;
  string description = 3;
}

message CreateAccountRequest{
  Account account = 1;
}

message CreateAccountResponse{
  uint64 id = 1;
}